--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in/
+//[Bb]in/
 [Oo]bj/
 [Ll]og/
 
@@ -180,7 +180,7 @@ publish/
 # in these scripts will be unencrypted
 PublishScripts/
 
-# NuGet Packages
+//# NuGet Packages
 *.nupkg
 # The packages folder can be ignored because of Package Restore
 **/[Pp]ackages/*
